<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NonstopSoC</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="turnleft">&lt;-</string>
    <string name="normal">0</string>
    <string name="turnright">-></string>
    <string name="exceed">과속</string>
    <string name="exceedhigh">매우과속</string>
    <string name="normalspeed">정속</string>
    <string name="Navi">Navi</string>
    
    <!-- FACEBOOK -->
    <string name="request">Request!</string>
    <string name="upload">Upload Photo</string><string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="no_login">Graph API Explorer</string>
    <string name="get_permissions">Get Permissions</string>
    <string name="access_token">Access Token:</string>
    <string name="graph_domain">https://graph.facebook.com/</string>
    <string name="submit">Submit</string>
    <string name="label_output">Output:</string>
    <string name="show_metadata">Show metadata</string>
    <string name="show_picture">Show picture</string>
    <string name="view_url">URL</string>
    <string name="target_url">Target URL:</string>
    <string name="exception">Exception: </string>
    <string name="tip_label">Tip:</string>
    <string name="error">Error</string>
    <string name="facebook_error">Facebook Error: </string>
    <string name="api_response">Api Response:</string>
    <string name="view_source">View Source</string>
    <string name="view_post">View Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="source_code">Source Code:</string>
    <string name="please_wait">Please wait...</string>
    <string name="view_photo">View Photo</string>
    <string name="hide_photo">Hide Photo</string>
    <string name="tag_photo">Tag Photo</string>
    <string name="graph_button">Graph API</string>
    <string name="fql_button">FQL Query</string>
    <string name="source_tag">Source tag:</string>
    <string name="permission_source_tag">Source tag: \"perms_tag\"</string>
    <string name="Graph_FQL_title">Graph API or FQL Query?</string>
    <string name="Graph_FQL_msg">Get friends using Graph or FQL Query?\n\nWith FQL query you can sort the list by names, whereas with Graph list will be ordered by UID and can\'t be changed.</string>
    <string name="can_post_on_wall_title">Post on friend\'s wall</string>
    <string name="can_post_on_wall">Friends list fetched. You can post on friend\'s wall by clicking on the item.</string>
    <string name="ok">OK</string>
    <string name="post_on_wall_title">Post on Wall?</string>
    <string name="post_on_wall">Would you like to post on %1$s\'s wall</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string  name="get_fields">Get Fields</string>
    <string name="fields">Fields</string>
    <string name="connections">Connections</string>
    <string  name="checkin">Check-in</string>
    <string name="cancel">Cancel</string>
    <string name="user">User Data</string>
    <string name="friend">Friends Data</string>
    <string name="extended">Extended</string>
    <string name="gallery_remote_title">Upload from gallery or remote?</string>
    <string name="gallery_remote_msg">Upload picture from phone\' gallery or remote server?</string>
    <string name="gallery_button">Gallery</string>
    <string name="remote_button">Remote</string>
    <string name="get_location">Get Location?</string>
    <string name="get_default_or_new_location">Get current location or use Times Square as the location?</string>
    <string name="current_location_button">Current Location</string>
    <string name="fetching_current_permissions">Fetching current permissions...</string>
    <string name="explorer_message">Also, checkout the web-version of the <a href="http://developers.facebook.com/tools/explorer">Graph API Explorer tool</a></string>
    <string name="nearby_places">Fetching nearby places...</string>
    <string name="times_square_button">Times Square</string>
    <string name="check_in_title">Check-in?</string>
    <string name="permissions">Permissions</string>
    <string name="back_parent">Back to parent</string>
    <string name="fields_and_connections">Fields \u0026 Connections</string>
    <string name="permissions_request">Select Permissions:</string>
    <string name="permission_detail">Checkout <a href="https://developers.facebook.com/docs/authentication/permissions/">permissions reference doc</a></string>
    <string name="fetching_location">Fetching Location...</string>
    <string name="check_in_at">Would you like to check-in at %1$s?</string>
    <string name="post_tip">\'read_stream\' permission is required to view and delete the post.\n\nUse SDK dialogs to publish stories or post on friends wall. <a href="https://developers.facebook.com/docs/reference/dialogs">More info</a>\n\n<a href="https://developers.facebook.com/docs/reference/api/Comment">Like and Comment on a post</a></string>
    <string name="photo_tip">Photos are by default uploaded to the app\'s album. Specify album_id to upload to specific album. E.g. https://graph.facebook.com/{album_id}/photos.\n\nMore Info: https://developers.facebook.com/docs/reference/api/photo</string>
    <string name="fqlquery">Enter FQL Query:</string>
    <string name="enable_gps_title">Enable GPS</string>
    <string name="enable_gps">Please enable GPS to get nearby places and check-in</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="refresh_token_title">Refresh Token</string>
    <string name="refresh_button">Refresh</string>
    <string name="refresh_button_pending">Refreshing…</string>
    <string name="refresh_token_tip">In most cases the access token should be refreshed silently when the application is running (for example see Hackbook onResume method).</string>
    <string name="refresh_token_binding_error">Binding to the Facebook Android Application failed (is it installed?).</string>
    <string name="access_token_label">Current access token:</string>
    <string name="access_token_expires_label">Token expires at:</string>
    <string name="photo">Photo</string>
    <string name="no_alarm">NOALARM</string>
    <string name="around_alarm">Around</string>
    <string name="ONALARM">on_alarm</string>
    <string name="on_time">ONTIME</string>
</resources>
